--- a/english.yml
+++ b/english.yml
@@ -1,5 +1,10 @@
-getmsg("ERROR1").replace("{STRING}",)
-getmsg("ERROR0").replace("{STRING}","
+# If you would like to customize the messages, this is now possible using the language setting.
+# You should not edit this file but you can edit a copy (e.g. rename it to gibberish.yml)
+# The "language: english" in the "config.yml" should change to reflect this (e.g. "language: gibberish")
+SIGNSUCCESS0: "&1[ADVBUY]"
+SIGNSUCCESS1: "&1[ADVSELL]"
+SIGNERROR0: "&4[ADVBUY]"
+SIGNERROR1: "&4[ADVSELL]"
 INFO0: "&6Reload of &c{PLUGIN}p &6complete!"
 INFO1: "&8===Thanks for using &9{PLUGIN} {VERSION}&8 by &9{AUTHOR}&8==="
 INFO2: "&7 - requested by &8woebegone1&7 on bukkit forums."
@@ -15,6 +20,7 @@ INFO11: "&6Amount Bought: &c{INT}"
 INFO12: "&6Amount Sold: &c{INT}"
 INFO13: "&6You now have&9: {INT}&6 XP"
 INFO14: "&6You were sent: &9{INT}&6 XP"
+INFO15: "&aSuccessfully created sign!"
 PURGE1: "&8===Purged &9{INT} &8lines of old &9AdvShop&8 history==="
 SEARCH1: "&6Unknown item &c{STRING}&6.\n&6 - Did you mean &c{STRING2}&6?{BREAK}&6 - Maybe try &c/hand"
 WARNING1: "&cChanging stock manually is not recommended&7 if you have the price dependent on stock over a period of time. You can disable time dependent stock in the config.yml."
