--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,8 @@
+# If you would like to change the commands to something else, this can be done in the commands.yml file.
+# View this page for help on adding command aliases: http://wiki.bukkit.org/Commands.yml
 name: AdvShop
 main: com.empcraft.advshop.AdvShop
-version: 0.0.4
+version: 0.2.0
 author: Empire92
 website: www.empcraft.com
 depend: [Vault]
