--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Jesse Boyd/Desktop/plugins/Vault.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesse Boyd/Desktop/b2/bukkit.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesse Boyd/Desktop/plugins/craftbukkit-1.7.2-R0.4-20140316.221310-4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesse Boyd/Desktop/plugins/bukkit-API.jar"/>
+	<classpathentry kind="lib" path="lib/bukkit-1.7.9.jar"/>
+	<classpathentry kind="lib" path="lib/Vault.jar"/>
+	<classpathentry kind="lib" path="lib/craftbukkit-1.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
